src/objects/Pricing_Request__c.object
<CustomObject>
    <fields>
        <fullName>BMR_1_Bed_Max_Rent__c</fullName>
        <label>BMR 1 Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1_Bed_Max__c</fullName>
        <label>BMR 1 Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1_Bed_Min_Rent__c</fullName>
        <label>BMR 1 Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1_Bed_Min__c</fullName>
        <label>BMR 1 Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1plus_Bed_Max_Rent__c</fullName>
        <label>BMR 1+ Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1plus_Bed_Max__c</fullName>
        <label>BMR 1+ Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1plus_Bed_Min_Rent__c</fullName>
        <label>BMR 1+ Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_1plus_Bed_Min__c</fullName>
        <label>BMR 1+ Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2_Bed_Max_Rent__c</fullName>
        <label>BMR 2 Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2_Bed_Max__c</fullName>
        <label>BMR 2 Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2_Bed_Min_Rent__c</fullName>
        <label>BMR 2 Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2_Bed_Min__c</fullName>
        <label>BMR 2 Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2plus_Bed_Max_Rent__c</fullName>
        <label>BMR 2+ Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2plus_Bed_Max__c</fullName>
        <label>BMR 2+ Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2plus_Bed_Min_Rent__c</fullName>
        <label>BMR 2+ Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_2plus_Bed_Min__c</fullName>
        <label>BMR 2+ Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3_Bed_Max_Rent__c</fullName>
        <label>BMR 3 Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3_Bed_Max__c</fullName>
        <label>BMR 3 Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3_Bed_Min_Rent__c</fullName>
        <label>BMR 3 Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3_Bed_Min__c</fullName>
        <label>BMR 3 Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3plus_Bed_Max_Rent__c</fullName>
        <label>BMR 3+ Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3plus_Bed_Max__c</fullName>
        <label>BMR 3+ Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3plus_Bed_Min_Rent__c</fullName>
        <label>BMR 3+ Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_3plus_Bed_Min__c</fullName>
        <label>BMR 3+ Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Jr_1_Bed_Max_Rent__c</fullName>
        <label>BMR Jr 1 Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Jr_1_Bed_Max__c</fullName>
        <label>BMR Jr 1 Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Jr_1_Bed_Min_Rent__c</fullName>
        <label>BMR Jr 1 Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Jr_1_Bed_Min__c</fullName>
        <label>BMR Jr 1 Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Other_Bed_Max_Rent__c</fullName>
        <label>BMR Other Bed - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Other_Bed_Max__c</fullName>
        <label>BMR Other Bed - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Other_Bed_Min_Rent__c</fullName>
        <label>BMR Other Bed - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Other_Bed_Min__c</fullName>
        <label>BMR Other Bed - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_SRO_Max_Rent__c</fullName>
        <label>BMR SRO - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_SRO_Max__c</fullName>
        <label>BMR SRO - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_SRO_Min_Rent__c</fullName>
        <label>BMR SRO - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_SRO_Min__c</fullName>
        <label>BMR SRO - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Studio_Max_Rent__c</fullName>
        <label>BMR Studio - Max Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Studio_Max__c</fullName>
        <label>BMR Studio - Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Studio_Min_Rent__c</fullName>
        <label>BMR Studio - Min Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_Studio_Min__c</fullName>
        <label>BMR Studio - Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buildg_Street_Address_Planning_Approval__c</fullName>
        <description>Building Address During the Planning Approval.</description>
        <formula>Listing__r.Building__r.Building_ST_Address_Planning_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Building Address During the Planning Approval.</inlineHelpText>
        <label>Buildg Street Address Planning Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Address_City__c</fullName>
        <defaultValue>&quot;San Francisco&quot;</defaultValue>
        <description>City for the Building</description>
        <inlineHelpText>City for the Building</inlineHelpText>
        <label>Building Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Address_Street__c</fullName>
        <description>Formula Field that pulls the street address from the building.</description>
        <formula>Listing__r.Building__r.Building_Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field that pulls the street address from the building.</inlineHelpText>
        <label>Building Address Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Address_Zip_Code__c</fullName>
        <formula>Listing__r.Building__r.Building_Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Address Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Zip_Code_Planning_Approval__c</fullName>
        <formula>Listing__r.Building__r.Building_Zip_Code_Planning_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Zip Code Planning Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condo_Mapped_by_Dept_of_Real_Estate__c</fullName>
        <description>Are the units condo mapped (i.e. subdivided) through the department of Real Estate?</description>
        <formula>Listing__r.Building__r.Condo_Mapped_by_Dept_of_Real_Estate__c</formula>
        <inlineHelpText>Are the units condo mapped (i.e. subdivided) through the department of Real Estate?</inlineHelpText>
        <label>Condo Mapped by Dept. of Real Estate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversion_to_Ownership_Units_Explain__c</fullName>
        <formula>Listing__r.Building__r.Conversion_to_Ownership_Units_Explain__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion to Ownership Units- Explain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Building_Permit_Issuance__c</fullName>
        <description>From the Building, Date Building Permit issued.</description>
        <formula>Listing__r.Building__r.Date_of_Building_Permit_Issuance__c</formula>
        <inlineHelpText>From the Building, Date Building Permit issued.</inlineHelpText>
        <label>Date of Building Permit Issuance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developer_City__c</fullName>
        <description>Developer City</description>
        <formula>Listing__r.Building__r.Developer_Contact__r.MailingCity</formula>
        <inlineHelpText>Developer City</inlineHelpText>
        <label>Developer City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Company__c</fullName>
        <formula>Listing__r.Building__r.Developer_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developer Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Email__c</fullName>
        <description>Developer Contact Email Address</description>
        <formula>Listing__r.Building__r.Developer_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Developer Contact Email Address</inlineHelpText>
        <label>Developer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <description>Name of the Developer Contact</description>
        <formula>Listing__r.Building__r.Developer_Contact__r.Full_Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Developer Contact</inlineHelpText>
        <label>Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Phone__c</fullName>
        <description>Phone for Developer</description>
        <formula>Listing__r.Building__r.Developer_Contact__r.Phone</formula>
        <inlineHelpText>Phone for Developer</inlineHelpText>
        <label>Developer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_State__c</fullName>
        <formula>Listing__r.Building__r.Developer_Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developer State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Street_Address__c</fullName>
        <description>Address of Developer</description>
        <formula>Listing__r.Building__r.Developer_Contact__r.MailingStreet</formula>
        <inlineHelpText>Address of Developer</inlineHelpText>
        <label>Developer Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Zip_Code__c</fullName>
        <description>Developer Postal Code</description>
        <formula>Listing__r.Building__r.Developer_Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Developer Postal Code</inlineHelpText>
        <label>Developer Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Date_BMR_Units_Can_be_Occupied__c</fullName>
        <label>Expected Date BMR Units Can be Occupied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Lease_Date_for_BMR_Units__c</fullName>
        <description>Date on which you expect the BMR Units to be Leased</description>
        <formula>Listing__r.Expected_Lease_Date_for_BMR_Units__c</formula>
        <inlineHelpText>Date on which you expect the BMR Units to be Leased</inlineHelpText>
        <label>Expected Lease Date for BMR Units</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_COO_Actual_Issue_Date__c</fullName>
        <description>Final COO Expected</description>
        <formula>Listing__r.Building__r.Final_COO_Actual_Issue_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final COO Actual Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_COO_Expected_Issue_Date__c</fullName>
        <description>Expected Date of the Final COO</description>
        <formula>Listing__r.Building__r.Final_COO_Expected_Issue_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected Date of the Final COO</inlineHelpText>
        <label>Final COO Expected Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_Utilities_are_Paid_by_the_Renter__c</fullName>
        <inlineHelpText>Describe what utilities are paid by the bulding, what utilities are paid by the renter, and if a third party vendor is used, what the renter is charged on a monthly basis (list utilities covered by third party vendor)</inlineHelpText>
        <label>How Utilities are Paid by the Renter?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intend_to_Convert_to_Ownership_Units__c</fullName>
        <description>Do you intend to convert to ownership units in the future?</description>
        <formula>TEXT(Listing__r.Building__r.Intend_to_Convert_to_Ownership_Units__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Do you intend to convert to ownership units in the future?</inlineHelpText>
        <label>Intend to Convert to Ownership Units?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_Email__c</fullName>
        <formula>Listing__r.Building__r.Leasing_Agent__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leasing Agent Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_Name__c</fullName>
        <description>Name of the Leasing Agent for the Building.</description>
        <formula>Listing__r.Building__r.Leasing_Agent__r.FirstName  &amp; &quot; &quot;  &amp; Listing__r.Building__r.Leasing_Agent__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Leasing Agent for the Building.</inlineHelpText>
        <label>Leasing Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_Phone__c</fullName>
        <description>Phone Number for the Leasing Agent.</description>
        <formula>Listing__r.Building__r.Leasing_Agent__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Phone Number for the Leading Agent.</inlineHelpText>
        <label>Leasing Agent Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Company_City__c</fullName>
        <formula>Listing__r.Building__r.Leasing_Company__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leasing Company City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Company_Name__c</fullName>
        <description>Name of the Leasing Company for the building</description>
        <formula>Listing__r.Building__r.Leasing_Company__r.Name</formula>
        <inlineHelpText>Name of the Leasing Company for the building.</inlineHelpText>
        <label>Leasing Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Company_State__c</fullName>
        <formula>Listing__r.Building__r.Leasing_Company__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leasing Company State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Company_Street_Address__c</fullName>
        <formula>Listing__r.Building__r.Leasing_Company__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leasing Company Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Company_Zip_Code__c</fullName>
        <formula>Listing__r.Building__r.Leasing_Company__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leasing Company Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Pricing Requests</relationshipLabel>
        <relationshipName>Pricing_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lowest_Monthly_Price_Market_Rate_RENTER__c</fullName>
        <description>If Leased Separately, Lowest Monthly Price for Market Rate Renter</description>
        <inlineHelpText>If Leased Separately, Lowest Monthly Price for Market Rate Renter</inlineHelpText>
        <label>Lowest Monthly Price -Market Rate RENTER</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lowest_Price_Lease_Market_Rate_OWNER__c</fullName>
        <description>If Sold/Leased Separately, Lowest Price/Lease for Space</description>
        <inlineHelpText>If Sold/Leased Separately, Lowest Price/Lease for space for market rate owners</inlineHelpText>
        <label>Lowest Price/Lease - Market Rate OWNER</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1_Bedroom_Max_Price__c</fullName>
        <label>Market Rate 1 Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate 1 Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1_Bedroom_Min_Price__c</fullName>
        <label>Market Rate 1 Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate 1 Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1plus_Bedroom_Max_Price__c</fullName>
        <label>Market Rate 1+ Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1plus_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate 1+ Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1plus_Bedroom_Min_Price__c</fullName>
        <label>Market Rate 1+ Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_1plus_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate 1+ Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2_Bedroom_Max_Price__c</fullName>
        <label>Market Rate 2 Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate 2 Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2_Bedroom_Min_Price__c</fullName>
        <label>Market Rate 2 Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate 2 Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2plus_Bedroom_Max_Price__c</fullName>
        <label>Market Rate 2+ Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2plus_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate 2+ Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2plus_Bedroom_Min_Price__c</fullName>
        <label>Market Rate 2+ Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_2plus_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate 2+ Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3_Bedroom_Max_Price__c</fullName>
        <label>Market Rate 3 Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate 3 Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3_Bedroom_Min_Price__c</fullName>
        <label>Market Rate 3 Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate 3 Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3plus_Bedroom_Max_Price__c</fullName>
        <label>Market Rate 3+ Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3plus_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate 3+ Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3plus_Bedroom_Min_Price__c</fullName>
        <label>Market Rate 3+ Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_3plus_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate 3+ Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Jr_1_Bedroom_Max_Price__c</fullName>
        <label>Market Rate Jr. 1 Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Jr_1_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate Jr. 1 Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Jr_1_Bedroom_Min_Price__c</fullName>
        <label>Market Rate Jr. 1 Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Jr_1_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate Jr. 1 Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Other_Bedroom_Max_Price__c</fullName>
        <label>Market Rate Other Bedroom - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Other_Bedroom_Max_Rent__c</fullName>
        <label>Market Rate Other Bedroom - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Other_Bedroom_Min_Price__c</fullName>
        <label>Market Rate Other Bedroom - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Other_Bedroom_Min_Rent__c</fullName>
        <label>Market Rate Other Bedroom - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_SRO_Max_Price__c</fullName>
        <label>Market Rate SRO - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_SRO_Max_Rent__c</fullName>
        <label>Market Rate SRO - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_SRO_Max_Rent_del__c</fullName>
        <label>Market Rate SRO - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_SRO_Min_Price__c</fullName>
        <label>Market Rate SRO - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_SRO_Min_Rent__c</fullName>
        <label>Market Rate SRO - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_SRO_Min_Rent_del__c</fullName>
        <label>Market Rate SRO - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Studio_Max_Price__c</fullName>
        <label>Market Rate Studio - Max. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Studio_Max_Rent__c</fullName>
        <label>Market Rate Studio - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Studio_Max_Rent_del__c</fullName>
        <label>Market Rate Studio - Max. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Studio_Min_Price__c</fullName>
        <label>Market Rate Studio - Min. Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Studio_Min_Rent__c</fullName>
        <label>Market Rate Studio - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Studio_Min_Rent_del__c</fullName>
        <label>Market Rate Studio - Min. Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NSR_Recorded_Date__c</fullName>
        <label>NSR Recorded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_of_Building__c</fullName>
        <formula>Listing__r.Building__r.Property_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of Building</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_City_and_County_of_SF_Planner__c</fullName>
        <description>Name of the City and County of San Francisco Planner.</description>
        <formula>Listing__r.Building__r.Name_of_City_and_County_of_SF_Planner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the City and County of San Francisco Planner.</inlineHelpText>
        <label>Name of City and County of SF Planner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_of_Special_Restrictions_NSR_Doc__c</fullName>
        <description>From the building, the NSR Document number.</description>
        <formula>Listing__r.Building__r.Notice_of_Special_Restrictions_NSR_Doc__c</formula>
        <inlineHelpText>From the building, the NSR Document number.</inlineHelpText>
        <label>Notice of Special Restrictions (NSR) Doc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Commercial_Stories__c</fullName>
        <label>Number of Commercial Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Residential_Stories__c</fullName>
        <label>Number of Residential Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parking_Space_Price_Inclusion_OWN_ONLY__c</fullName>
        <label>Parking Space Price Inclusion-OWN ONLY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Included in Sales Price</fullName>
                </value>
                <value>
                    <fullName>Sold/Leased Separately</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parking_Space_Price_Inclusion_RENT_ONLY__c</fullName>
        <label>Parking Space Price Inclusion-RENT ONLY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parking Not Available</fullName>
                </value>
                <value>
                    <fullName>Included with Rent</fullName>
                </value>
                <value>
                    <fullName>Leased Separately</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parking_Space_Purchase_Type_OWN_ONLY__c</fullName>
        <label>Parking Space Purchase Type-OWN ONLY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sell</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planning_Motion_Adopted_Date__c</fullName>
        <label>Planning Motion Adopted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planning_Motion_Number__c</fullName>
        <description>From the building, the Planning Motion Number</description>
        <formula>Listing__r.Building__r.Planning_Motion_Number__c</formula>
        <inlineHelpText>From the building, the Planning Motion Number</inlineHelpText>
        <label>Planning Motion Number</label>
        <type>Text</type>
    </fields>
</CustomObject>